# djangoProjectAvito

./: 123.py  db.sqlite3  pyproject.toml
ads/: models.py  views.py
ads/migrations/: 0001_initial.py
ads/urls/: ad.py  cat.py
data/: csv_to_json.py
datasets/: ads.json  csv_to_json.py  users.json
homework27/: settings.py  urls.py
users/: models.py
users/migrations/: 0001_initial.py
